# c_example_security

./: CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt
k8s/: deployment.yaml
src/: vulneravel.c
